test/runnable/order.nt
module order;

void main() { foo(); auto a = new A; S s; }

void foo() { bar(); }

void bar() { }

class A : B { this() { } }

class B { }

struct S { T t; }

struct T { }
