test/fail_compilation/class_template.nt
module class_template;

interface Intf(T) {
}

class Class(T) : Intf!T {
    this() { }
}

void foo(T)(T arg, Intf!int obj) {}
void main() { foo(5, new Class!float); }
